cleanup and format other "Printer" classes